<resources>
    <string name="app_name">TaxiTest</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="mainactivity_onexit_1">Sure you want to exit?</string>
    <string name="mainactivity_onexit_2">Exiting will automatically cancel your open communications.</string>
    <string name="mainactivity_setstatustext_1">Searching</string>
    <string name="mainactivity_setstatustext_2">Awaiting</string>
    <string name="mainactivity_setstatustext_3">Inactive</string>
    <string name="mainactivity_showchangedest_1">match your destination with your latest client:</string>
    <string name="mainactivity_showchangedest_2">change your destination to:</string>
    <string name="mainactivity_countdowntimer_1">Are you still using the app?</string>
    <string name="mainactivity_countdowntimer_2">The app will automatically close unless you return to it</string>
    <string name="mainactivity_notificationsdescription">channel for communication notifications when app is in the background</string>
    <string name="activitytilemap_destination">Destination:</string>
    <string name="activitytilemap_status">Status:</string>
    <string name="entryactivity_choosecity">choose city!</string>
    <string name="activityentry_hello">Hello</string>
    <string name="activityentry_choosecity">choose city</string>
    <string name="activityentry_searchtaxi">Search taxi</string>
    <string name="helpactivity_videoloadingalert">wait a moment while player loads and try again</string>
    <string name="helpactivity_termsofuse">Terms of use</string>
    <string name="helpactivity_datapolicy">Data policy</string>
    <string name="activityhelp_videotutorials">Video tutorials</string>
    <string name="activityhelp_documents">Documents</string>
    <string name="termsandconditions">Terms and conditions</string>
    <string name="activityhelp_read">read</string>
    <string name="activityhelp_howweusedata">How we use your data</string>
    <string name="activityhelp_suggestions">Suggestions</string>
    <string name="activityhelp_suggestionstext1">Contact us under the following links and leave your comments and ideas</string>
    <string name="activityhelp_suggestionstext2">or write us at dale.viaje@gmail.com for your business propositions</string>
    <string name="activityhelp_aboutus">About Us</string>
    <string name="activityhelp_aboutustext">This app has been a personal project for some time and is a gift for my city, Estelí.\n\
        As of now its is not a business although we are considering financing it through Advertisement in the future.\n\
        Our aim is to make it available for free to both drivers and customers in order to improve the quality, efficiency and safety of the public transportation for all involved parties.</string>
    <string name="activityhelp_bytheoetandres">by \\n  theo &amp; \\n andres</string>
    <string name="helpvideos_intro">intro</string>
    <string name="helpvideos_introlong">Introductory app tour</string>
    <string name="helpvideos_introdesc">learn basic usage of the app</string>
    <string name="helpvideos_security">security</string>
    <string name="helpvideos_securitylong">How to travel safely</string>
    <string name="helpvideos_securitydesc">"learn how the app protects you "</string>
    <string name="helpvideos_reputation">reputation</string>
    <string name="helpvideos_reputationlong">Make the service better</string>
    <string name="helpvideos_reputationdesc">review your trips in order to help the next user</string>
    <string name="helpvideos_pasttrips">past trips</string>
    <string name="helpvideos_pasttripslong">View your travel history</string>
    <string name="helpvideos_pasttripsdesc">keep a record of all your travels</string>
    <string name="helpvideos_settings">settings</string>
    <string name="helpvideos_settingslong">Explore advanced options</string>
    <string name="helpvideos_settingsdesc">tune the app to get the most out of it</string>
    <string name="pasttripsactivity_title">Past trips</string>
    <string name="adapterpastcomms_from">from:</string>
    <string name="adapterpastcomms_to">to:</string>
    <string name="adapterpastcomms_accepted">accepted</string>
    <string name="pasttripsadapter_accepted">accepted</string>
    <string name="pasttripsadapter_contacted">contacted</string>
    <string name="pasttripsadapter_observing">observed</string>
    <string name="pasttripsadapter_onprofileclick">opening online profile</string>
    <string name="pasttripsadapter_chatwith">"Chat with "</string>
    <string name="dialogtripdetails_title">Trip information</string>
    <string name="dialogtripdetails_date">date:</string>
    <string name="dialogtripdetails_passengers">passengers:</string>
    <string name="dialogtripdetails_status">status:</string>
    <string name="close">close</string>
    <string name="pasttripsadapter_plate">"plate: "</string>
    <string name="registrationactivitybasic_title">User Registration</string>
    <string name="registrationactivitybasic_personaldata">Personal\\nData</string>
    <string name="registrationactivitybasic_infofirst">using your real name will increase the trust of your counterparts</string>
    <string name="registrationactivitybasic_infolast">adding a last name will increase the trust of your counterparts</string>
    <string name="registrationactivitybasic_infophone">i.e. 8765-4321 or +1-179-123456</string>
    <string name="registrationactivitybasic_infosharephone">optional, your phone will only\n be shared with drivers you have traveled with</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="registrationactivitybasic_awaitcamera">wait while camera opens</string>
    <string name="dob">date of birth</string>
    <string name="registrationactivitybasic_inputrequired">input required</string>
    <string name="registrationactivitybasic_invalidphone">invalid phone number</string>
    <string name="registrationactivitybasic_faultyphone">phone number faulty</string>
    <string name="registrationactivitybasic_jsonerror">json could not be read</string>
    <string name="registrationactivitybasic_unknownerror">Unknown error</string>
    <string name="registrationactivitybasic_failedtoconnect">Failed to connect server or timeout, check your internet connection</string>
    <string name="registrationactivitybasic_resnotfound">Resource not found</string>
    <string name="registrationactivitybasic_loginagain"> Please login again</string>
    <string name="registrationactivitybasic_checkinputs"> Check your inputs</string>
    <string name="registrationactivitybasic_somethingiswrong">" Something is comming out wrong"</string>
    <string name="registrationactivitybasic_registrationongoing">Registration ongoing</string>
    <string name="registrationactivitybasic_textongoing">Please wait while the registration process finishes</string>
    <string name="registrationactivitybasic_registrationsuccess">Registration complete</string>
    <string name="registrationactivitybasic_textsuccess">You have been registered successfully.\n Your user ID is </string>
    <string name="registrationactivitybasic_textsucess2">. \nThis ID will be useful if you ever lose your phone on a ride.</string>
    <string name="registrationactivitybasic_error">Error</string>
    <string name="registrationactivitybasic_errortext">An error occurred while registering.\n Please make sure your internet connection is working and try again later</string>
    <string name="dialogregister_nomsgs">no messages to show</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="dialogendsearch_title">Did your taxi arrive?</string>
    <string name="dialogendsearch_text1">It seems that your selected taxi already passed by your position.</string>
    <string name="dialogendsearch_text2">End this search if you are already on your way.</string>
    <string name="auto_accept_in">auto-accept in:</string>
    <string name="dialogendsearch_yesend">yes, end search</string>
    <string name="dialogendsearch_continuesearch">continue searching</string>
    <string name="settingsfragment_filteramplitude">Filter amplitude</string>
    <string name="settingsfragment_degrees">degrees</string>
    <string name="settingsfragment_filterhint">high values mean you will see more taxis of different colors, low values tht those taxis you see will go close to your destination</string>
    <string name="settingsfragment_numberoftaxis">Number of pins shown</string>
    <string name="settingsfragment_taxis">taxis</string>
    <string name="settingsfragment_hinttaxis">defines how many pins are shown on the map on average. Reduce this number if your device gets slow. Increase it if you find not enough options are shown</string>
    <string name="dialogsettingszoomtilt_title">Define default view</string>
    <string name="zoom">zoom:</string>
    <string name="angle">angle:</string>
    <string name="pivot">pivot:</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="dialogresetdest_title">Reset destination</string>
    <string name="dialogresetdest_text">change my destination to:</string>
    <string name="dialogownstatus_title">What do you want to do?</string>
    <string name="dialogownstatus_isempty">taxi is Empty</string>
    <string name="dialogownstatus_isfull">taxi is full</string>
    <string name="commdialog_nomsgs">no messages to show</string>
    <string name="failed">failed</string>
    <string name="commsdialogadapter_invitationbyyou">invitation sent by you</string>
    <string name="commsdialogadapter_invitationbyother">invitation sent by</string>
    <string name="commsdialogadapter_acceptedbyother">deal accepted by</string>
    <string name="commsdialogadapter_acceptedbyyou">deal accepted by you</string>
    <string name="commsdialogadapter_audiobyyou">playing audio sent by you</string>
    <string name="commsdialogadapter_audiobyother">playing audio sent by</string>
    <string name="commsdialogadapter_nothingtoshow">nothing to show</string>
    <string name="commsdialogadapter_received">received:</string>
    <string name="commsdialogadapter_played">played:</string>
    <string name="commsdialogadapter_heard">heard:</string>
    <string name="commsdialogadapter_failed">failed:</string>
    <string name="commsobject_youwerecontacted">You have been contacted!</string>
    <string name="commsobject_youwerecontacteddesc">Someone has sent you a message on Dale Viaje recently</string>
    <string name="commsobject_chatunknown">Chat with UNKNOWN</string>
    <string name="commsobject_unknown">UNKNOWN</string>
    <string name="commsobject_chatwith">Chat with</string>
    <string name="commsadapter_invite">invite</string>
    <string name="commsadapter_recording">recording:\n </string>
    <string name="commsadapter_recordingended">recording ended</string>
    <string name="commsadapter_awaitingresponsetoast">awaiting response from other party</string>
    <string name="commsadapter_taxialreadyaccepted">user was already accepted</string>
    <string name="commsadapter_awaitingresponse">awaiting response</string>
    <string name="commsadapter_playaudio">play audio</string>
    <string name="activitychoosedestination_selectone">Select ONE of the following options</string>
    <string name="activitychoosedestination_choosebarrio">choose barrio</string>
    <string name="activitychoosedestination_referencepoint">choose reference point</string>
    <string name="activitychoosedestination_seats">seats</string>
    <string name="activitychoosedestination_taponmap">define destination by tapping on the map</string>
    <string name="activitychoosedestination_destchosen">Destination chosen</string>
    <string name="activityhelp_title">help</string>
</resources>