<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:windowActionBarOverlay="true"
    android:animateLayoutChanges="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar_container"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_choose_dest"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/AppTheme.Toolbar"
            app:titleTextColor="@android:color/white"
            app:titleTextAppearance="@style/ownStyle">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:src="@drawable/ic_logo_new_dale_viaje"
        android:id="@+id/logo_fake_splash"
        android:layout_margin="12dp"/>

  <LinearLayout
      android:layout_width="match_parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar_container"
      android:layout_height="wrap_content"
      android:id="@+id/parent_layout_choose_dest"
      android:orientation="vertical"
      android:padding="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="8dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSelected"
                    android:text="@string/activitychoosedestination_selectone"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lo_barrio"
                        android:hint="@string/activitychoosedestination_choosebarrio"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/actv_barrio"

                            android:inputType="textAutoComplete"
                            android:completionThreshold="1"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <ProgressBar
                        android:id="@+id/pb_barrio"
                        style="?android:attr/progressBarStyleSmall"
                        android:indeterminateTint="@color/colorDeselected"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_marginBottom="2.1dp"
                        android:layout_marginEnd="2.1dp"
                        android:layout_gravity="end|bottom"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lo_reference"
                        android:layout_marginTop="6dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:hint="@string/activitychoosedestination_referencepoint"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/actv_reference"
                            android:completionThreshold="0"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <ProgressBar
                        android:id="@+id/pb_reference"
                        style="?android:attr/progressBarStyleSmall"
                        android:indeterminateTint="@color/colorDeselected"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_marginBottom="2.1dp"
                        android:layout_marginEnd="2.1dp"
                        android:layout_gravity="end|bottom"/>

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:textColorHint"
                    android:layout_marginTop="5dp"
                    android:text="@string/activitychoosedestination_seats"
                    android:textAlignment="center"/>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="40dp"
                    android:layout_marginTop="5dp"
                    android:padding="1dp"
                    android:orientation="vertical"
                    android:background="@drawable/rounded_background">

                    <ImageButton
                        android:layout_width="38dp"
                        android:layout_height="30dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:id="@+id/bt_up"
                        android:tint="@color/colorSelected"
                        android:src="@drawable/up_icon"/>

                    <TextView
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:id="@+id/tv_seats"
                        android:text="1"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textAlignment="gravity"/>

                    <ImageButton
                        android:layout_width="38dp"
                        android:layout_height="30dp"
                        android:tint="@color/colorSelected"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/down_icon"
                        android:id="@+id/bt_down" />


                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="2dp"
          android:paddingStart="12dp"
          android:text="@string/activitychoosedestination_taponmap"
          android:textColor="?android:textColorHint" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:padding="4dp"
        app:cardElevation="2dp"
        app:strokeColor="#000000"
        app:strokeWidth="1dp"
        app:cardCornerRadius="12dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map_container" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_background_tight"
            android:orientation="vertical"
            android:id="@+id/confirm_layout"
            android:layout_gravity="center_horizontal|top"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activitychoosedestination_destchosen"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_chosen_barrio"
                android:textColor="@color/colorRed"
                android:shadowColor="@android:color/black"
                android:shadowRadius="1"
                android:shadowDx="1"
                android:shadowDy="1"
                android:text="barrio name"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_margin="8dp"
                    android:id="@+id/bt_dest_cancel"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:layout_margin="8dp"
                    android:id="@+id/bt_dest_confirm" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>